Distributed Implementation (#14)
* Add Auth class to handle authentication requests concurrenty

* Make server session code concurrent and move it to Session class

* Move Client authentication code to authenticate method

* Change type of lock to ReadWriteLock

* Add job execution in server

* Add job execution request to client

* Update SD.iml with the sd23.jar dependency

* Remove unrelated class

* Add scheduler to job execution

* Change addJob from returning Optional to throwing exception

* Encapsulate messages and their types in a Message class

* Change Payloads to be the Message

* Implement connection

* Make server accept messages concurrently

* Make client send messages concurrently

* Move serialization of the message type and deserialization of the message do the Message interface

* Add ConcurrentCounter class

* Add connection.multiplexer package

* Change client connection to a MultiplexedConnection and server connection to TaggedConnection

* Fix handling of invalid commands

* Add @Override annotation to close methods

* Add status request

* Fix job request to specify required memory

* Add workers functionality

* Remove option to run the job in the server

* Make socket io streams buffered

* Fix MasterScheduler initialization

* Fix multiplexed connection and status request